Keep result reader compatible with Android minimum